<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home_navi"
        android:title="Home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/Profile_navi"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_account_circle_24"/>

    <item
        android:id="@+id/lost_navi"
        android:title="Lost people"
        android:icon="@drawable/lost"/>

    <item
        android:id="@+id/events_navi"
        android:title="@string/events"
        android:icon="@drawable/event"/>
    <item
        android:id="@+id/donation_navi"
        android:title="@string/donation"
        android:icon="@drawable/donation"/>
    <item
        android:id="@+id/adoption_navi"
        android:title="@string/adoption"
        android:icon="@drawable/child_care"/>
    <item
        android:id="@+id/recognition_navi"
        android:title="@string/recognition_by_camera"
        android:icon="@drawable/camera"/>


    <item
        android:id="@+id/chat"
        android:title="Chat"
        android:icon="@drawable/icon_chat" />
    <group
        android:id="@+id/two">
        <item
            android:id="@+id/connect_navi"
            android:title="Contact us"
            android:icon="@drawable/phone"/>
        <item
            android:id="@+id/about_navi"
            android:title="@string/about"
            android:icon="@drawable/about"/>


    </group>

    <group
        android:id="@+id/three">
        <item
            android:id="@+id/logOut_navi"
            android:title="@string/log_out"
            android:icon="@drawable/logout"/>
    </group>



</menu>