<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#C8BEBE"
    tools:context=".RecognitionByCamera">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:src="@drawable/recognition" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/costemcard"
            android:layout_marginTop="@dimen/_28sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/choose_a_path_from_3_options"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnParents"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/loginbtn"
                android:text="@string/parents"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/if_you_are_a_parent_or_close_relative_of_a_missing_child_please_fill_in_the_data_to_help_our_application_find_your_child"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/camera_button"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/loginbtn"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/searching_for_a_missing_child_please_upload_a_picture_of_the_child_to_help_our_site_search_for_him"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddTheHomeless"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_13sdp"
                android:background="@drawable/loginbtn"
                android:text="@string/add_the_homeless"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/you_found_a_homeless_child_in_the_street_you_must_help_us_protect_him_through_the_application_by_uploading_a_picture_of_the_child_and_taking_his_data_if_possible"
                android:textColor="@color/black"
                android:textSize="@dimen/_7sdp" />
        </LinearLayout>

</LinearLayout>
